[gd_scene load_steps=6 format=3 uid="uid://base-entity"]

[ext_resource type="Script" path="res://scripts/entities/BaseEntity.gd" id="1"]
[ext_resource type="Script" path="res://scripts/components/HealthComponent.gd" id="2"]
[ext_resource type="Script" path="res://scripts/components/MovementComponent.gd" id="3"]
[ext_resource type="Script" path="res://scripts/components/HitboxComponent.gd" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(24, 24)

[sub_resource type="CircleShape2D" id="2"]
radius = 10.0

[node name="BaseEntity" type="CharacterBody2D"]
script = ExtResource("1")

[node name="BodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("3")

[node name="HitboxComponent" type="Area2D" parent="."]
script = ExtResource("4")

[node name="HitboxShape" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("2")
